--- a/package.json
+++ b/package.json
@@ -4,8 +4,37 @@
   "description": "Sistema de pago de cuotas de Dos Horizontes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "startNode": "tsc && gulp && concurrently \"npm run node\" ",
+    "start": "concurrently \"npm run tsc:w\" \"npm run node\" ",
+    "node": "nodemon ./index.js",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w"
+  },
+  "dependencies": {
+    "@types/express": "^4.0.35",
+    "@types/mongoose": "^5.0.9",
+    "@types/node-sass": "^3.10.32",
+    "body-parser": "^1.18.3",
+    "concurrently": "^3.1.0",
+    "express": "^4.16.3",
+    "express-query-boolean": "^2.0.0",
+    "http-status-codes": "^1.1.6",
+    "moment": "^2.19.3",
+    "mongoose": "^5.4.14",
+    "nodemailer": "^4.6.2",
+    "passport": "^0.3.2",
+    "passport-jwt": "^4.0.0",
+    "require-dir": "^0.3.0",
+    "typescript": "^2.9.2"
   },
   "author": "Luis Parada",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/mongodb": "^3.3.14",
+    "@types/node": "^8.10.59",
+    "@types/request": "^2.48.1",
+    "nodemon": "^1.17.4",
+    "tslint": "^5.11.0",
+    "tslint-eslint-rules": "^5.3.1"
+  }
 }
