--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.19.3",
     "mongoose": "^5.4.14",
     "nodemailer": "^4.6.2",
+    "oauth": "^0.9.15",
     "passport": "^0.3.2",
     "passport-jwt": "^4.0.0",
     "require-dir": "^0.3.0",
