--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "tsc": "tsc",
     "tsc:w": "tsc -w"
   },
+  "engines": {
+    "node": "10.16.3"
+  },  
   "dependencies": {
     "@types/express": "^4.0.35",
     "@types/mongoose": "^5.0.9",
